# OpenWorld-Multimodal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  FINAL_REPORT.md  LICENSE  README.md  SYSTEM_REPORT.md  demo.py  demo_cli.py  pyproject.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  QUICKSTART.md
openworld/: __init__.py  __version__.py
openworld/cli/: __init__.py  evaluate.py  generate.py  main.py  train.py
openworld/evaluation/: __init__.py  benchmarks.py  perceptual_metrics.py  physics_metrics.py
openworld/generation/: __init__.py  beam_search.py  sampler.py
openworld/training/: __init__.py  losses.py  trainer.py
openworld/utils/: logging.py
tests/: __init__.py
tests/test_models/: __init__.py  test_transformer_world_model.py
